--- a/index.html
+++ b/index.html
@@ -122,3 +122,6 @@ function getDistance(lat1, lon1, lat2, lon2) {
   return R * (2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a)));
 }
 </html>
+
+<button onclick="window.location.href='quiz.html'">防災クイズへ</button>
+<button onclick="window.location.href='goods.html'">防災グッズページへ</button>
