--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css">
+  <!-- Leaflet本体 -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
+<script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+
+<!-- Leaflet Rotation プラグイン -->
+<script src="https://unpkg.com/leaflet-rotate@0.2.1/dist/leaflet-rotate.min.js"></script>
 </head>
 <body>
   <h1>吉田町 防災マップ</h1>
