--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <title>吉田町 防災マップ</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css">
-  <!-- Leaflet本体 -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
-<script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Leaflet Rotation プラグイン -->
-<script src="https://unpkg.com/leaflet-rotate@0.2.1/dist/leaflet-rotate.min.js"></script>
+  <!-- Leaflet本体 -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+  />
+  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+
+  <!-- Leaflet Rotateプラグイン -->
+  <script src="https://unpkg.com/leaflet-rotate@0.2.1/dist/leaflet-rotate.min.js"></script>
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
+  
 <body>
   <h1>吉田町 防災マップ</h1>
 
