--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
   <div style="margin-top: 10px; text-align: center;">
     <button onclick="window.location.href='quiz.html'">防災クイズへ</button>
     <button onclick="window.location.href='goods.html'">防災グッズページへ</button>
-  </div>
+  <button onclick="window.location.href='quiz.html'">防災クイズへ</button>
+  <button onclick="window.location.href='goods.html'">防災グッズページへ</button>
+  <button onclick="window.location.href='tsunami.html'">🌊 南海トラフ想定津波マップへ</button>
+</div>
 
   <!-- ✅ JavaScript 読み込み -->
   <script src="script.js"></script>
